tests/miniJava/neg/004282_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { int int [] java ( ) { return 0 ; } }
